<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".RegistrationActivity">

    <RelativeLayout
        android:id="@+id/rellay1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linley"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLogin"
            android:layout_marginTop="20dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/edtFName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/et_bg"
                android:ems="20"
                android:fontFamily="sans-serif-light"
                android:hint="@string/full_name"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edtnumber"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/et_bg"
                android:ems="20"
                android:fontFamily="sans-serif-light"
                android:hint="@string/phone_number"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:phoneNumber="true"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edtMail"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/et_bg"
                android:ems="20"
                android:fontFamily="sans-serif-light"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edtPass"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/et_bg"
                android:ems="20"
                android:fontFamily="sans-serif-light"
                android:hint="@string/password"
                android:inputType="textPersonName"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:password="true"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edtCPass"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/et_bg"
                android:ems="20"
                android:fontFamily="sans-serif-light"
                android:hint="@string/confirm_password"
                android:inputType="textPersonName"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:password="true"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linley"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:paddingLeft="70sp"
            android:paddingRight="70sp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/pBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="109dp"
            android:layout_height="101dp"
            android:layout_below="@+id/btnReg"
            android:layout_marginStart="114dp"
            android:layout_marginLeft="114dp"
            android:layout_marginBottom="73dp"
            android:background="@color/black"
            android:visibility="invisible" />

    </RelativeLayout>


</RelativeLayout>